--- a/home page.html
+++ b/home page.html
@@ -35,24 +35,24 @@
 
               </ul>
           </header>
-          <div class = "intro-content-box">
-            <h2>Who are we, what are we doing in this space...</h2> 
-            <p>
-              We are an Alpha group based on discord, we provide Education on Solana & Ethereum NFTs, as well as trading Futures. We have dedicated team  to help bring profits to our community. among the team we have years of experience in bull markets and bear markets. weve even brought in sport bets callers due to meta changes and hes killing it approx. 64% win raate this current month. join our discord to find to see the profits we are making.
-            </p>  
-          </div>
-          <div class="logo-div">
+          <div>
+            <div class = "intro-content-box">
+              <h2>Who are we, what are we doing in this space...</h2>
+              <p>
+                We are an Alpha group based on discord, we provide Education on Solana & Ethereum NFTs, as well as trading Futures. We have dedicated team  to help bring profits to our community. among the team we have years of experience in bull markets and bear markets. weve even brought in sport bets callers due to meta changes and hes killing it approx. 64% win raate this current month. join our discord to find to see the profits we are making.
+              </p>  
+            </div>
+            <div class="logo-div">
               <img class="logo" src="css/images/wall-of-gain.png">
+            </div>
           </div>
     </section>
 
-  <!--team section--> 
-  <section class="team-container" id="wall-of-gains">
-    <section class="headings-box" style="
-      position: relative;
-  ">
+  <!--team section-->
+  <section class="headings-box">
       <h2>The Founders</h2>
-    </section>
+  </section> 
+  <section class="team-container" id="wall-of-gains">
     <div class="card">
       <div class="imgbox">
         <img src="css/images/nk.pfp.jpeg" alt="Nk profile picture">
@@ -146,7 +146,7 @@
   <div>
     <p class = "caller-content-box">A term you will come across in this space, is the Callers. Callers are indivudals that have been in their respective space for an amount of time and have been able to increase their wins, through developing their analytic skills when it comes to Nfts or Futures. Callers in our discord research and provide informatin for those in the community  allowing them to share their opinion in the community.</p>
   </div>
-  <section>
+  <section class="callers-container">
     <div class = "caller-box">
       <span></span>
       <div class="callers-content">
@@ -207,95 +207,100 @@
     <div class="slider">
       <div class="slide-track">
         <div class="slide">
-          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png"></image>
+          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png"></image>
+          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png"></image>
+          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png" style="
+    height: 566px;
+">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png" style="
+    height: 566px;
+">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png" style="
+    height: 566px;
+">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png"></image>
+          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png"></image>
+          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png"></image>
+          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png">
         </div>
         <!--pics repeated-->
         <div class="slide">
-          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png"></image>
+          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png"></image>
+          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png"></image>
+          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png"></image>
+          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png"></image>
+          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png"></image>
+          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png"></image>
+          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png">
         </div>
         <div class="slide">
-          <image class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png"></image>
+          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png">
         </div>
       </div>
     </div>
   </div>
 </section>
-
 <!--education-->
 <section class = "education-wrapper" id="Education">
   <header>
