--- a/membership.html
+++ b/membership.html
@@ -7,7 +7,7 @@
     <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
     <meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
     <meta name="author" content="Wall Of Gains">
-    <link href="css/game.css" href="css/membership.css" rel="stylesheet" type="text/css">
+    <link href="css/membership.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
     <title>Wall Of Gains - Game Section</title>
 </head>
@@ -35,9 +35,6 @@
             <div class="intro-content-box">
                 <h2>Membership</h2> 
                 <p>Join our membership today to get access to get full access to our server. That means NFT calls, both solana and ethereum, future calls, sport bets. Our community are enjoying the profits you should too.</p>  
-            </div>
-            <div class="logo-div">
-                <img class="logo" src="css/images/wall-of-gain.png">
             </div>
         </div>
     </section>
