--- a/game section.html
+++ b/game section.html
@@ -15,33 +15,30 @@
 <!--- top of page python3 -m http.server-->
 
 <body>
-    <section>
+    <section class="header-section">
         <div class="container">
             <header id="home">
-                <div class="audio-div">
-                    <audio autoplay="" controls="" preload="auto">
-                    <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio>
-                    <p class="play-me">Play Me! while you read</p>
-                </div>
                 <ul>
                     <li><a href="home page.html" class="active">Home</a></li>
-                    <li><a href="#contact" class="active">Contact</a></li>
+                    <li><a href="#contact us" class="active">Contact</a></li>
                 </ul>
             </header>
             <div class="intro-content-box">
-                <h2>Wall Of Gains - Games</h2> 
+                <h2>Wall Of Games</h2> 
                 <p>Welcome to our gamezone, members will be able to complete their daily quest by playing right here. By connecting your discord to our website we can track quest and allocate points towards our reward store for in-sever benefits </p>  
-            </div>
-            <div class="logo-div">
-                <img class="logo" src="css/images/wall-of-gain.png">
             </div>
         </div>
     </section>
 
+    <div class="game-selection">
+        <a href="snake page.html">
+            <h2>snake</h2>
+        </a>
+        <p>click here to play snake</p>
+    </div>
+
 <!--Coin Flip-->
-    <section class="cf-section">
+   <!--<section class="cf-section">
         <header class="coinflip-header">
             <h2>Coin Flip</h2>
         </header>
@@ -66,12 +63,13 @@
                 <span id="result"></span>
             </div>
         </div> 
-    </section>
+    </section>--> 
 <!--Snake-->
-    <section class="snake-section"> 
+    <!--<section class="snake-section"> 
         <header class="snake-header">
             <h2>Snake</h2>
         </header>
         <div id="gameBoard"></div>
+    -->
 </body>
 </html>
