--- a/snake page.html
+++ b/snake page.html
@@ -7,17 +7,18 @@
     <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
     <meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
     <meta name="author" content="Wall Of Gains">
-    <link href="css/game.css" href="css/game.js" rel="stylesheet" type="text/css">
-    <script src="css/game.js" defer type="module"></script>
+    <link rel="stylesheet" type="text/css" href="snake/snake-page.css"
+    <script src="snake/snake-game.js" defer type="module"></script>
     <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
     <title>Wall Of Gains - Game Section</title>
 </head>
     <body>
     <!--Snake-->
+    <header class="snake-header">
+        <h2>Snake</h2>
+    </header>
     <section class="snake-section"> 
-        <header class="snake-header">
-            <h2>Snake</h2>
-        </header>
-        <div id="gameBoard"></div>
+        <div id="game-board">
+        </div>
     </body>
 </html>
