--- a/game section.html
+++ b/game section.html
@@ -31,9 +31,7 @@
     </section>
 
     <div class="game-selection">
-        <a href="snake page.html" target="_blank">
-            <h2>snake</h2>
-        </a>
+        <a class="snake-button" href="snake page.html" target="_blank"> Snake</a>
         <p>click here to play snake</p>
     </div>
 
