--- a/home page.html
+++ b/home page.html
@@ -18,8 +18,8 @@
         <div class="container">
           <header id="home" id="top">
             <div class="audio-div">
-              <audio autoplay controls preload="auto">
-                <source src="css/audio/Konoha Peace - Naruto Vibes (1 Hour) Naruto study lofi chill beats [TubeRipper.com].mp4" type="audio/mpeg">
+              <audio autoplay controls autoplay loop preload="auto">
+                <source src="css/audio/Konoha Peace - Naruto Vibes.mp4" type="audio/mpeg">
               Your browser does not support the audio element.
               </audio>
               <p class="play-me">Play Me! while you read</p>
