--- a/game section.html
+++ b/game section.html
@@ -19,7 +19,7 @@
         <div class="container">
             <header id="home">
                 <ul>
-                    <li><a href="home page.html" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="#contact us" class="active">Contact</a></li>
                 </ul>
             </header>
