--- a/membership.html
+++ b/membership.html
@@ -28,7 +28,7 @@
                     <p class="play-me">Play Me! while you read</p>
                 </div>
                 <ul>
-                    <li><a href="home page.html" class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="#contact us" class="active">Contact</a></li>
                 </ul>
             </header>
