--- a/index.html
+++ b/index.html
@@ -206,100 +206,75 @@
   <div class="picture-container-1">
     <div class="slider">
       <div class="slide-track">
+
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png">
+          <img class="profit-image-1" alt="solana NFT profit" src="solana_profit.PNG">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png">
+          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png">
+          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png" style="
-    height: 566px;
-">
+          <img class="profit-image" alt="Futures profit" src="futues-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg">
+          <img class="profit-image" alt="Futures profit" src="future-profit-2.jpg">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png" style="
-    height: 566px;
-">
+          <img class="profit-image" alt="Futures profit" src="future-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png" style="
-    height: 566px;
-">
+          <img class="profit-image" alt="Futures profit" src="future-profit-4.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit-2.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit-3.png">
         </div>
         <!--pics repeated-->
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-2.png">
+          <img class="profit-image-1" alt="solana NFT profit" src="solana_profit.PNG">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit-3.png">
+          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="css/images/sol-nft-profit.png">
+          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/futues-profit-1.png">
+          <img class="profit-image" alt="Futures profit" src="futues-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-2.jpg">
+          <img class="profit-image" alt="Futures profit" src="future-profit-2.jpg">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-3.png">
+          <img class="profit-image" alt="Futures profit" src="future-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="css/images/future-profit-4.png">
+          <img class="profit-image" alt="Futures profit" src="future-profit-4.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-3.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="etherum profit" src="css/images/eth-nft-profit-2.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit-2.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-1.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-2.png">
-        </div>
-        <div class="slide">
-          <img class="profit-image" alt="sports profit" src="css/images/sport-bet-profit-3.png">
+          <img class="profit-image" alt="sports profit" src="sport-bet-profit-3.png">
         </div>
       </div>
-    </div>
-  </div>
 </section>
 <!--education-->
 <section class = "education-wrapper" id="Education">
@@ -308,7 +283,10 @@
   </header>
 
   <div>
-    <h3>New to NFTs ?<span>Then this is a great community to start your NFT/Crypto journey. We all know what it's like coming in to this space, it's a lot to take in, and it can be overwhelming! So we have a golden rule in our discord, and that is, there is no stupid questions! Everyone is kind and helpful, so dont be afraid to join the conversation, it’s the best way to learn. if you have time spare come check out these helpful sites to explore the crypto and NFT space. the first type for any newbie entering either the Ethereum or Solana the first step is, to buy that cryptocurrecny on an exchange. lets say we wanted to buy a solana NFT, we buy our Solaana on an exchange e.g.<span><a href="https://www.coinbase.com" target="_blank">Coinbase</a> then we transfer this to a wallet ready to buy the solana NFT. we will go into more detail in the discord with step by step instructions.</h3></span>
+    <h3>New to NFTs ?</h3>
+    <p>
+      Then this is a great community to start your NFT/Crypto journey. We all know what it's like coming in to this space, it's a lot to take in, and it can be overwhelming! So we have a golden rule in our discord, and that is, there is no stupid questions! Everyone is kind and helpful, so dont be afraid to join the conversation, it’s the best way to learn. if you have time spare come check out these helpful sites to explore the crypto and NFT space. the first type for any newbie entering either the Ethereum or Solana the first step is, to buy that cryptocurrecny on an exchange. lets say we wanted to buy a solana NFT, we buy our Solaana on an exchange e.g.<a href="https://www.coinbase.com" target="_blank">Coinbase</a> then we transfer this to a wallet ready to buy the solana NFT. we will go into more detail in the discord with step by step instructions.
+    </p>
   </div>
 
   <!--marketplaces-->
