homepage - complete membership - complete game section - complete snake game - complete read me - complete

--- a/game section.html
+++ b/game section.html
@@ -31,43 +31,8 @@
     </section>
 
     <div class="game-selection">
-        <a class="snake-button" href="snake page.html" target="_blank"> Snake</a>
-        <p>click here to play snake</p>
+        <h2>Snake</h2>
+        <a class="snake-button" href="snake page.html" target="_blank"> Click here to play !!</a>
     </div>
-
-<!--Coin Flip-->
-   <!--<section class="cf-section">
-        <header class="coinflip-header">
-            <h2>Coin Flip</h2>
-        </header>
-        <div class="cf-container">
-            <div class="stats">
-                <p class="heads-count">Heads: 0</p>
-                <p class="tails-count">Tails: 0</p>
-            </div>
-            <div class="coin">
-                <div class="heads">
-                    <img src="css/images/heads.png">
-                </div>
-                <div class="tails">
-                    <img src="css/images/tails.png">
-                </div>
-            </div>
-            <div class="buttons">
-                <button id="head-pick">Heads</button>
-                <button id="tails-pick">Tails</button>
-                <button id="flip-button">Flip</button>
-                <br>
-                <span id="result"></span>
-            </div>
-        </div> 
-    </section>--> 
-<!--Snake-->
-    <!--<section class="snake-section"> 
-        <header class="snake-header">
-            <h2>Snake</h2>
-        </header>
-        <div id="gameBoard"></div>
-    -->
 </body>
 </html>
