--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                   <li><a href="#profits" class="active">Profits</a></li>
                   <li><a href="#Education" class="active">Education</a></li>
                   <li><a href="membership.html">Membership</a></li>
-                  <li><a href="#contact" class="active">Contact</a></li>
                   <li><a href="game section.html" class="active">Game Section</a></li>
 
               </ul>
@@ -208,71 +207,71 @@
       <div class="slide-track">
 
         <div class="slide">
-          <img class="profit-image-1" alt="solana NFT profit" src="solana_profit.PNG">
+          <img class="profit-image-1" alt="solana NFT profit" src="/css/images/solana_profit.PNG">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit-3.png">
+          <img class="profit-image" alt="solana NFT profit" src="/css/images/sol-nft-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit.png">
+          <img class="profit-image" alt="solana NFT profit" src="/css/images/solana_profit_2.PNG">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="futues-profit-1.png">
+          <img class="profit-image" alt="Futures profit" src="/css/images/futues-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="future-profit-2.jpg">
+          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-2.jpg">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="future-profit-3.png">
+          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="future-profit-4.png">
+          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-4.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit-1.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit-2.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-2.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit-3.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-3.png">
         </div>
         <!--pics repeated-->
         <div class="slide">
-          <img class="profit-image-1" alt="solana NFT profit" src="solana_profit.PNG">
+          <img class="profit-image-1" alt="solana NFT profit" src="/css/images/solana_profit.PNG">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit-3.png">
+          <img class="profit-image" alt="solana NFT profit" src="/css/images/sol-nft-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="solana NFT profit" src="sol-nft-profit.png">
+          <img class="profit-image" alt="solana NFT profit" src="/css/images/solana_profit_2.PNG">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="futues-profit-1.png">
+          <img class="profit-image" alt="Futures profit" src="/css/images/futues-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="future-profit-2.jpg">
+          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-2.jpg">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="future-profit-3.png">
+          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-3.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="Futures profit" src="future-profit-4.png">
+          <img class="profit-image" alt="Futures profit" src="/css/images/future-profit-4.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit-1.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-1.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit-2.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-2.png">
         </div>
         <div class="slide">
-          <img class="profit-image" alt="sports profit" src="sport-bet-profit-3.png">
+          <img class="profit-image" alt="sports profit" src="/css/images/sport-bet-profit-3.png">
         </div>
       </div>
 </section>
