--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content=" Wall Of Gains is a community built on discord, we offer education and alpha within web 3. From NFT's to Cryptocurrency flipping, holdr, swings and scalps we got all.">
 	<meta name="keywords" content="discord, community, nft, nfts, crypto, crypto currency, solana, etherum, futures">
   <meta name="author" content="Wall Of Gains">
-  <link href="css/style.css" href="css/main.js" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/d9081b5008.js" crossorigin="anonymous"></script>
   <title>Wall Of Gains</title>
 </head>
